src/main/java/com/example/signalapp/error/SignalAppException.java
package com.example.signalapp.error;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@RequiredArgsConstructor
@Getter
public class SignalAppException extends Exception {

    private final SignalAppErrorCode errorCode;

}
